--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {      
         "laravel/socialite": "4.*",
-        "illuminate/support": "6.*"
+        "illuminate/support": "6.*|^7.0"
     },
     "autoload" : {
         "psr-4": {
